fix: 🧩 resolves scrollbars that appear due to insufficient width of the file sidebar.

--- a/src/components/terminal/index.module.scss
+++ b/src/components/terminal/index.module.scss
@@ -16,4 +16,9 @@
     height: 100vh;
     box-sizing: border-box;
   }
+  .ant-tree-list-holder {
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
 }
